# Node-and-coordinates-using-opencv-ball-detection

./: README.md
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/pkgconfig/: ball_tracking_pkg.pc  test_py.pc
catkin_ws/devel/lib/test_py/: simple_publisher.py
catkin_ws/devel/share/ball_tracking_pkg/cmake/: ball_tracking_pkgConfig.cmake
catkin_ws/devel/share/test_py/cmake/: test_pyConfig.cmake
catkin_ws/src/ball_tracking_pkg/: CMakeLists.txt
catkin_ws/src/ball_tracking_pkg/scripts/: balltcolor.py
catkin_ws/src/test_py/: CMakeLists.txt  package.xml
